test/libsolidity/syntaxTests/nameAndTypeResolution/557_no_address_members_on_contract_callcode.sol
contract C {
    function f() public {
        this.callcode;
    }
}
// ----
// TypeError: (47-60): Member "callcode" not found or not visible after argument-dependent lookup in contract C
